<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_fovorite"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/action_favorite_words"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_swap_languages"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_swap_languages"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_word"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add_word"
        app:showAsAction="ifRoom" />
</menu>